filtro inicial de projetos

--- a/projetos/templates/index_projetos.html
+++ b/projetos/templates/index_projetos.html
@@ -18,6 +18,7 @@
     <h5>Análises</h5>
     <ul>
         <a href="{% url 'projetos_vs_propostas' %}"><li>Organizações, Projetos e Propostas</li></a>
+        <a href="{% url 'filtro_projetos' %}"><li>Filtro para Projetos</li></a>
     </ul>
 
 {% endblock %}
