--- a/templates/areas.html
+++ b/templates/areas.html
@@ -13,6 +13,15 @@
     </script>
 
     <table>
+        {% if titulo_areas %}
+            <tr>
+                <td style="text-align: center;"><input type="checkbox" id="titulo_areas" value="{{area.titulo}}"
+                    {% if tudo_ligado %}checked{% endif %}
+                    {% if vencido %}disabled{% endif %}>
+                </td>
+                <td style="text-align: center;"><label for="titulo_areas" style="line-height:0.6em;"><b>Áreas de Interesse</b></label></td>
+            </tr>
+        {% endif %}
         {% for area in areast %}
             <tr><td>&nbsp;
                     <input type="checkbox" name="selection" id="{{area.id}}" value="{{area.titulo}}" class="filtra_area"
@@ -43,5 +52,65 @@
         {% if vencido %}disabled{% endif %}
         >{% for a in aa %}{% if a.outras %}{{a.outras}}{% endif %}{% endfor %}</textarea>
     {% endif %}        
+
+    {% if titulo_areas %}
+
+      <script>
+
+        var filterList = $("input.filtra_area[type=checkbox]");
+
+        function atualiza_colunas() {
+
+            var verdade = true;
+            filterList.each(function(i, el) {
+                if(!($(el)[0].checked)) {
+                  verdade = false;
+                  return;
+                } 
+            });
+            if(verdade) {
+                $("#titulo_areas").prop("checked", true);
+                $("#titulo_areas").prop("indeterminate", false);
+                return;
+            }
+            
+            var verdade = false;
+            filterList.each(function(i, el) {
+                if($(el)[0].checked) {
+                  verdade = true;
+                  return;
+                } 
+            });
+            if(!verdade) {
+                $("#titulo_areas").prop("checked", false);
+                $("#titulo_areas").prop("indeterminate", false);
+                return;
+            }
+
+            $("#titulo_areas").prop("indeterminate", true);
+
+        }
+
+        atualiza_colunas();
+
+        $('.filtra_area').change(function() {
+            atualiza_colunas();
+        });
+
+        $('#titulo_areas').change(function() {
+            if( $("#titulo_areas").is(':checked') ) {
+                filterList.each(function(i, el) {
+                    $(el).prop("checked", true).change();
+                });
+            } else {
+                filterList.each(function(i, el) {
+                    $(el).prop("checked", false).change();
+                });
+            }
+        });
+
+      </script>
+
+    {% endif %}  
 
 {% endif %}
