filtros por areas para projetos

--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -108,6 +108,10 @@
       {% with tabela='Parceiros' %}
         {% include "tabelas_scripts.html" %}
       {% endwith %}
+      {% comment %} 
+        //var table = $('#ProjetosTable').DataTable();
+        //table.search("Bioengenharia").draw();
+      {% endcomment %}
     }
     window.onload = carrega_pagina
 
