--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -53,8 +53,9 @@
   <span id="informacoes" style="border: 1px solid gray; border-radius: 2px; padding: 1px; margin-left: 20px;">
     <span id="informacoes_tag">&nbsp;Informações <i class="arrow right"></i>&nbsp;</span>
     <div id="toggle" style="display: none; height: 1em;">
-      <label><input id="organizacao" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
-      <label><input id="orientador" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="periodo" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> Período</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="organizacao" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Organização</label>&nbsp;&nbsp;&nbsp;
+      <label><input id="orientador" onchange="($(this).prop('checked') ? $('#ProjetosTable tr > *:nth-child(4)').show() : $('#ProjetosTable tr > *:nth-child(4)').hide())" type="checkbox" checked /> Orientador</label>&nbsp;&nbsp;&nbsp;
       <label><input id="grupo" onchange="($(this).prop('checked') ? $('.grupo').show() : $('.grupo').hide())" type="checkbox" checked /> Grupo</label>&nbsp;&nbsp;&nbsp;
       <label class="grupo"><input id="email" onchange="($(this).prop('checked') ? $('.email').show() : $('.email').hide())" type="checkbox" checked /> e-mail</label>&nbsp;&nbsp;&nbsp;
       <label class="grupo"><input id="curso" onchange="($(this).prop('checked') ? $('.curso').show() : $('.curso').hide())" type="checkbox" checked /> curso</label>&nbsp;&nbsp;&nbsp;
@@ -68,6 +69,7 @@
         <th style="border-right:0px; border-left:0px;"></th>
         <th style="border-right:0px; border-left:0px;"></th>
         <th style="border-right:0px; border-left:0px;"></th>
+        <th style="border-right:0px; border-left:0px;"></th>
         <th colspan="2" class="text-center">
           <b>Relatórios</b>
         </th>
@@ -77,13 +79,14 @@
       </tr>
       <tr>
         <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Projeto</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Orientador</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Intermediária">Inte.</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(7)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
-        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(8)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Período</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Organização</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Orientador</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Intermediária">Inte.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(6)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Relatório Final">Final</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(7)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Intermediária">Inte.</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(8)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Final">Final</th>
+        <th onclick="w3.sortHTML('#ProjetosTable', '.item', 'td:nth-child(9)')" style="cursor:pointer" class="text-center" data-toggle="tooltip" data-html="true" animation="true" title="Banca Falconi">Falc.</th>
       </tr>      
 
       {% for projeto, relatorio_intermediario, relatorio_final, banca_intermediaria, banca_final, banca_falconi in tabela %} 
@@ -127,6 +130,9 @@
                 </li>
               {% endfor %}
             </ul>
+          </td>
+          <td>
+            {{projeto.ano}}.{{projeto.semestre}}
           </td>
           <td>
             <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
