--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -237,9 +237,17 @@
         <a href="{% url 'projeto_completo' projeto.id %}"> 
           <li>
             {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
-            {% if projeto.avancado %}
-              <strong style="color:red"><u>[Avançado]</u></strong><br>
-            {% endif %}
+            <u><strong style="color:red">
+              {% if projeto.avancado %}
+                [Avançado]
+              {% endif %}
+              {% if projeto.proposta.internacional %}
+                [Internacional]
+              {% endif %}
+              {% if projeto.proposta.intercambio %}
+                [Intercâmbio]
+              {% endif %}
+            </strong></u><br>
           </li>
         </a>
       {% endif %}
