--- a/professores/templates/professores/bancas_editar.html
+++ b/professores/templates/professores/bancas_editar.html
@@ -68,6 +68,9 @@
           >
             {{projeto.ano}}.{{projeto.semestre}} ({{projeto.organizacao}}) {{projeto.titulo}}
             {% if projeto.avancado %}[Avançado]{% endif %}
+            {% if projeto.proposta.internacional %}[Internacional]{% endif %}
+            {% if projeto.proposta.intercambio %}[Intercâmbio]{% endif %}
+            
           </option>  
         {% endfor %}
       </select><br><br>
