--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -113,6 +113,17 @@
             {% if projeto.proposta.internacional %}
               <font color="red">Internacional</font>
             {% endif %}
+
+            {% if projeto.avancado or projeto.proposta.internacional %}
+              {% if projeto.proposta.intercambio %}
+                /
+              {% endif %}
+            {% endif %}
+            
+            {% if projeto.proposta.intercambio %}
+              <font color="red">Intercâmbio</font>
+            {% endif %}
+
             <br>
 
             <ul class="grupo" style="margin-bottom: 6px;">
