--- a/projetos/templates/projetos/filtra_projetos.html
+++ b/projetos/templates/projetos/filtra_projetos.html
@@ -57,9 +57,17 @@
                   {% else %}
                     {{projeto.titulo}}
                   {% endif %}
-                  {% if projeto.avancado %}
-                    <strong style="color:red"><u>[Avançado]</u></strong><br>
-                  {% endif %}
+                  <u><strong style="color:red">
+                    {% if projeto.avancado %}
+                      [Avançado]
+                    {% endif %}
+                    {% if projeto.proposta.internacional %}
+                      [Internacional]
+                    {% endif %}
+                    {% if projeto.proposta.intercambio %}
+                      [Intercâmbio]
+                    {% endif %}
+                  </strong></u><br>
                 </a>
               </th>
               <td>
