--- a/propostas/templates/propostas/index_propostas.html
+++ b/propostas/templates/propostas/index_propostas.html
@@ -16,6 +16,7 @@
         <a href="{% url 'mapeamento_estudantes_propostas' %}"><li>Mapeamento Estudantes e Propostas de Projetos</li></a>
         <a href="{% url 'propor' %}"><li>Propor Grupos para Projetos</li></a>
         <a href="{% url 'montar_grupos' %}"><li>Montar Grupos para Projetos</li></a>
+        <a href="{% url 'procura_grupos' %}"><li>Grupos Fechados com Procura</li></a>
     </ul>
     
 {% endblock %}
