--- a/professores/templates/professores/relato_avaliar.html
+++ b/professores/templates/professores/relato_avaliar.html
@@ -88,7 +88,16 @@
       {% csrf_token %}
 
       <b>Projeto:</b> {{projeto.titulo}}<br>
-      <b>Orientador{% if projeto.orientador.user.genero == "F" %}a{% endif %}:</b> {{projeto.orientador}}<br>
+      {% if projeto.orientador %}
+        {% if projeto.proposta.intercambio %}
+          <b>Professor{% if projeto.orientador.user.genero == 'F' %}a{% endif %} Responsável:</b>
+        {% else %}
+          <b>Orientador{% if projeto.orientador.user.genero == 'F' %}a{% endif %}:</b>
+        {% endif %}
+        {{projeto.orientador}}<br>
+      {% else %}
+        Orientador: Não definido
+      {% endif %}
       <br><br>
 
       {% for alocacao, relato in alocacoes_relatos %}
