--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -27,20 +27,16 @@
       border: 0px;
     }
 
-    .div-table {
-      display: table;         
-      width: auto;         
-      border-spacing: 5px; /* cellspacing:poor IE support for  this */
-    }
+    .div-table {}
+
     .div-table-row {
-      display: table-row;
-      width: auto;
-      clear: both;
+      display: flex;
     }
+
     .div-table-col {
-      float: left; /* fix for  buggy browsers */
-      display: table-column;
-      padding-right: 10px;
+      /* border: 1px solid grey; */
+      padding-right: 5px;
+      flex: 1; 
     }
 
   </style>
@@ -85,14 +81,14 @@
 
     .semestre1 {
       border-radius: 5px 0px 0px 5px;
-      padding: 4px 9px; 
+      #padding: 4px 9px;
       background: #D0EED0;
       cursor: pointer;
     }
 
     .semestre2 {
       border-radius: 0px 5px 5px 0px;
-      padding: 4px 9px; 
+      #padding: 4px 9px; 
       background: #D0EED0;
       cursor: pointer;
     }
@@ -365,7 +361,7 @@
         {% nospaces %}
         <div class="div-table">
           <div class="div-table-row">
-             <div class="div-table-col" style="width: 70px;"><b>Data</b></div>
+             <div class="div-table-col" style="flex-basis: 100px; flex-grow: 0; flex-shrink: 0;"><b>Data</b></div>
              <div class="div-table-col" style="width: 400px;"><b>Aula</b></div>
              <div class="div-table-col" style="width: 400px;"><b>Local</b></div>
           </div>
@@ -374,10 +370,10 @@
               <span class="ano{{aula.endDate.year}} ano">
                 <span class="semestre" data-mes="{{aula.endDate.month}}">
                   <div class="div-table-row">       
-                    <div class="div-table-col" style="width: 70px;">{{aula.endDate.day}}/{{aula.endDate.month}}</div>
+                    <div class="div-table-col" style="flex-basis: 100px; flex-grow: 0; flex-shrink: 0;">{{aula.endDate|date:"d/m/Y"}}</div>
                     <div class="div-table-col" style="width: 400px;">{{aula.observacao}}</div> 
                     <div class="div-table-col" style="width: 400px;">{{aula.location}}</div>
-                  </div><br>
+                  </div>
                 </span>
               </span>
 
